--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,14 @@ language: php
 php:
   - 5.4
   - 5.5
-  - 5.6
-  - hhvm
  
 before_script:
+  - printf "\n" | pecl install yaml-beta
+  - echo "extension=yaml.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
  
+notifications:
+    email: false
+
 script: phpunit
